[gd_scene load_steps=12 format=2]

[ext_resource path="res://Sprites/Bullet/Medium0.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Bullet/Medium1.png" type="Texture" id=3]
[ext_resource path="res://Scripts/Player/Bullet2.gd" type="Script" id=31]

[sub_resource type="Shader" id=6]
code = "shader_type canvas_item;


uniform vec4 original_0: hint_color;
uniform vec4 original_1: hint_color;
uniform vec4 original_2: hint_color;
uniform vec4 original_3: hint_color;
uniform vec4 original_4: hint_color;
uniform vec4 replace_0: hint_color;
uniform vec4 replace_1: hint_color;
uniform vec4 replace_2: hint_color;
uniform vec4 replace_3: hint_color;
uniform vec4 replace_4: hint_color;

const float precision = 0.1;


vec4 swap_color(vec4 color){
	vec4 original_colors[5] = vec4[5] (original_0, original_1, original_2, original_3, original_4);
	vec4 replace_colors[5] = vec4[5] (replace_0, replace_1, replace_2, replace_3, replace_4);
	for (int i = 0; i < 5; i ++) {
		if (distance(color, original_colors[i]) <= precision){
			return replace_colors[i];
		}
	}
	return color;
}


void fragment() {
	COLOR = swap_color(texture(TEXTURE, UV));
}"

[sub_resource type="ShaderMaterial" id=7]
shader = SubResource( 6 )
shader_param/original_0 = null
shader_param/original_1 = null
shader_param/original_2 = null
shader_param/original_3 = null
shader_param/original_4 = null
shader_param/replace_0 = null
shader_param/replace_1 = null
shader_param/replace_2 = null
shader_param/replace_3 = null
shader_param/replace_4 = null

[sub_resource type="Shader" id=8]
code = "shader_type canvas_item;


uniform vec4 original_0: hint_color;
uniform vec4 original_1: hint_color;
uniform vec4 original_2: hint_color;
uniform vec4 original_3: hint_color;
uniform vec4 original_4: hint_color;
uniform vec4 replace_0: hint_color;
uniform vec4 replace_1: hint_color;
uniform vec4 replace_2: hint_color;
uniform vec4 replace_3: hint_color;
uniform vec4 replace_4: hint_color;

const float precision = 0.1;


vec4 swap_color(vec4 color){
	vec4 original_colors[5] = vec4[5] (original_0, original_1, original_2, original_3, original_4);
	vec4 replace_colors[5] = vec4[5] (replace_0, replace_1, replace_2, replace_3, replace_4);
	for (int i = 0; i < 5; i ++) {
		if (distance(color, original_colors[i]) <= precision){
			return replace_colors[i];
		}
	}
	return color;
}


void fragment() {
	COLOR = swap_color(texture(TEXTURE, UV));
}"

[sub_resource type="ShaderMaterial" id=9]
shader = SubResource( 8 )
shader_param/original_0 = Color( 0.572549, 0.00784314, 0, 1 )
shader_param/original_1 = Color( 1, 0.85098, 0.654902, 1 )
shader_param/original_2 = null
shader_param/original_3 = null
shader_param/original_4 = null
shader_param/replace_0 = Color( 1, 1, 1, 1 )
shader_param/replace_1 = Color( 0.882353, 0.882353, 0.882353, 1 )
shader_param/replace_2 = null
shader_param/replace_3 = null
shader_param/replace_4 = null

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 10.0
}, {
"frames": [  ],
"loop": true,
"name": "hit",
"speed": 20.0
} ]

[sub_resource type="CircleShape2D" id=1]
radius = 2.0

[sub_resource type="CapsuleShape2D" id=3]
radius = 2.99998
height = 2.00004

[sub_resource type="ParticlesMaterial" id=5]
lifetime_randomness = 0.5
emission_shape = 1
emission_sphere_radius = 1.0
flag_disable_z = true
direction = Vector3( 1, 1, 0 )
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 60.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
color = Color( 0.0666667, 0.47451, 1, 1 )

[node name="Bullet2" type="KinematicBody2D"]
material = SubResource( 7 )
script = ExtResource( 31 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
material = SubResource( 9 )
position = Vector2( 1, 1.3 )
scale = Vector2( 1.1, 1.1 )
frames = SubResource( 2 )
playing = true

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )
disabled = true

[node name="Area2D" type="Area2D" parent="." groups=["Bullet2"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
rotation = 1.5708
shape = SubResource( 3 )

[node name="Particles2D" type="Particles2D" parent="."]
emitting = false
amount = 100
lifetime = 0.3
one_shot = true
speed_scale = 1.5
explosiveness = 1.0
visibility_rect = Rect2( -50, -50, 100, 100 )
process_material = SubResource( 5 )

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
